docs: update openapi spec
